feature: Added meta images

--- a/public/index.html
+++ b/public/index.html
@@ -12,12 +12,14 @@
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Hi all, and weclome to my thoughts. I created this blog just to document, and share my findings throughout my Software Engineering career. One of the purposes of having this blog is actually to force myself to learn more, and explore new areas in software as a whole. So I hope you enjoy these articles and find them helpful." />
-    <meta name="title" content="dev-pieter | Developer Blog" />
-    <meta property="og:title" content="dev-pieter | Developer Blog" />
+    <meta name="title" content="Pieter Nortje | Developer Blog" />
+    <meta property="og:image" content="https://blog.devpieter.co.za/site_image.png" />
+    <meta property="og:title" content="Pieter Nortje | Developer Blog" />
     <meta property="og:description" content="Hi all, and weclome to my thoughts. I created this blog just to document, and share my findings throughout my Software Engineering career. One of the purposes of having this blog is actually to force myself to learn more, and explore new areas in software as a whole. So I hope you enjoy these articles and find them helpful." />
     <meta name="twitter:card" content="summary" />
+    <meta name="twitter:image" content="https://blog.devpieter.co.za/site_image.png" />
     <meta name="twitter:creator" content="Pieter Nortje" />
-    <meta name="twitter:title" content="dev-pieter | Developer Blog" />
+    <meta name="twitter:title" content="Pieter Nortje | Developer Blog" />
     <meta name="twitter:description" content="Hi all, and weclome to my thoughts. I created this blog just to document, and share my findings throughout my Software Engineering career. One of the purposes of having this blog is actually to force myself to learn more, and explore new areas in software as a whole. So I hope you enjoy these articles and find them helpful." />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   </head>
